feat(core): 升级图格式版本并重构列表节点系统
- 将图格式版本从V21升级到V22
- 删除Chunk List、Combine Lists、Zip Lists和Transpose Lists节点类型
- 将Map List节点重映射为Map Numbers节点
- 移除Group List节点的旧output_groups连接
- 更新Create List节点支持通用异构列表构建
- 修改Data Series节点生成DOUBLE_LIST而非整数列表
- 更新Dispatch List节点使用BOOLEAN_LIST掩码
- 从节点状态中移除allowDifferentTypes和useIntegerType配置选项
- 添加对数据树(DATA_TREE)类型的支持以替代分组列表输出