@@ -3,7 +3,6 @@ package com.nodecraft.nodesystem.nodes.math.list_sequence;
 import com.nodecraft.nodesystem.api.NodeDataType;
 import com.nodecraft.nodesystem.api.NodeEffect;
 import com.nodecraft.nodesystem.api.NodeInfo;
-import com.nodecraft.nodesystem.api.NodeProperty;
 import com.nodecraft.nodesystem.core.BaseNode;
 import com.nodecraft.nodesystem.core.BasePort;
 import com.nodecraft.nodesystem.execution.ExecutionContext;
@@ -11,26 +10,18 @@ import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.UUID;
 
 @NodeInfo(
     effect = NodeEffect.PURE,
     id = "math.list.statistics",
     displayName = "List Statistics",
-    description = "Computes min, max, sum, average, and median for a numeric list.",
+    description = "Computes min, max, sum, average, and median for a DOUBLE_LIST.",
     category = "math.list",
     order = 30
 )
 public class ListStatisticsNode extends BaseNode {
-
-    @NodeProperty(displayName = "Ignore Non-Numeric", category = "Statistics", order = 1)
-    private boolean ignoreNonNumeric = true;
-
-    @NodeProperty(displayName = "Ignore Nulls", category = "Statistics", order = 2)
-    private boolean ignoreNulls = true;
 
     private static final String INPUT_LIST_ID = "input_list";
 
@@ -45,14 +36,14 @@ public class ListStatisticsNode extends BaseNode {
     public ListStatisticsNode() {
         super(UUID.randomUUID(), "math.list.statistics");
 
-        addInputPort(new BasePort(INPUT_LIST_ID, "List", "Input numeric list", NodeDataType.LIST, this));
+        addInputPort(new BasePort(INPUT_LIST_ID, "Numbers", "Input double list", NodeDataType.DOUBLE_LIST, this));
 
         addOutputPort(new BasePort(OUTPUT_MIN_ID, "Min", "Minimum value", NodeDataType.DOUBLE, this));
         addOutputPort(new BasePort(OUTPUT_MAX_ID, "Max", "Maximum value", NodeDataType.DOUBLE, this));
         addOutputPort(new BasePort(OUTPUT_SUM_ID, "Sum", "Sum of values", NodeDataType.DOUBLE, this));
         addOutputPort(new BasePort(OUTPUT_AVERAGE_ID, "Average", "Average value", NodeDataType.DOUBLE, this));
         addOutputPort(new BasePort(OUTPUT_MEDIAN_ID, "Median", "Median value", NodeDataType.DOUBLE, this));
-        addOutputPort(new BasePort(OUTPUT_COUNT_ID, "Count", "Count of valid numeric values", NodeDataType.INTEGER, this));
+        addOutputPort(new BasePort(OUTPUT_COUNT_ID, "Count", "Count of finite numeric values", NodeDataType.INTEGER, this));
         addOutputPort(new BasePort(OUTPUT_VALID_ID, "Valid", "Whether computation succeeded", NodeDataType.BOOLEAN, this));
     }
 
@@ -64,23 +55,16 @@ public class ListStatisticsNode extends BaseNode {
             return;
         }
 
-        List<Double> values = new ArrayList<>();
+        List<Double> values = new ArrayList<>(inputList.size());
         for (Object item : inputList) {
-            if (item == null) {
-                if (!ignoreNulls) {
-                    setInvalidOutputs();
-                    return;
-                }
-                continue;
+            if (!(item instanceof Number number)) {
+                setInvalidOutputs();
+                return;
             }
-
-            Double value = toDouble(item);
-            if (value == null || !Double.isFinite(value)) {
-                if (!ignoreNonNumeric) {
-                    setInvalidOutputs();
-                    return;
-                }
-                continue;
+            double value = number.doubleValue();
+            if (!Double.isFinite(value)) {
+                setInvalidOutputs();
+                return;
             }
             values.add(value);
         }
@@ -90,8 +74,8 @@ public class ListStatisticsNode extends BaseNode {
             return;
         }
 
-        double min = values.get(0);
-        double max = values.get(0);
+        double min = values.getFirst();
+        double max = values.getFirst();
         double sum = 0.0d;
         for (double v : values) {
             min = Math.min(min, v);
@@ -128,64 +112,4 @@ public class ListStatisticsNode extends BaseNode {
         outputValues.put(OUTPUT_COUNT_ID, 0);
         outputValues.put(OUTPUT_VALID_ID, false);
     }
-
-    private Double toDouble(Object value) {
-        if (value instanceof Number number) {
-            return number.doubleValue();
-        }
-        if (value instanceof String text) {
-            try {
-                return Double.parseDouble(text.trim());
-            } catch (NumberFormatException ignored) {
-                return null;
-            }
-        }
-        return null;
-    }
-
-    @Override
-    public Object getNodeState() {
-        Map<String, Object> state = new HashMap<>();
-        state.put("ignoreNonNumeric", ignoreNonNumeric);
-        state.put("ignoreNulls", ignoreNulls);
-        return state;
-    }
-
-    @Override
-    public void setNodeState(Object state) {
-        if (!(state instanceof Map<?, ?> map)) {
-            return;
-        }
-        Object ignoreNonNumericValue = map.get("ignoreNonNumeric");
-        if (ignoreNonNumericValue instanceof Boolean value) {
-            setIgnoreNonNumeric(value);
-        }
-        Object ignoreNullsValue = map.get("ignoreNulls");
-        if (ignoreNullsValue instanceof Boolean value) {
-            setIgnoreNulls(value);
-        }
-    }
-
-    public boolean isIgnoreNonNumeric() {
-        return ignoreNonNumeric;
-    }
-
-    public void setIgnoreNonNumeric(boolean value) {
-        if (ignoreNonNumeric != value) {
-            ignoreNonNumeric = value;
-            markDirty();
-        }
-    }
-
-    public boolean isIgnoreNulls() {
-        return ignoreNulls;
-    }
-
-    public void setIgnoreNulls(boolean value) {
-        if (ignoreNulls != value) {
-            ignoreNulls = value;
-            markDirty();
-        }
-    }
 }
-
